# SurgWMBench

./: .gitignore  README.md
HieraSurg/: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt  requirements_labeler.txt  train_videos.txt  val_videos.txt
HieraSurg/labeler/: dataset_track.py  radio_utils.py  to_jpg_folder.py  tracker_utils.py  vis_utils.py
HieraSurg/src/finetune/: pipeline.py  train_cogvideox_cholec_lora.py  train_cogvideox_cholec_lora_highfps.py  train_cogvideox_cholec_segmap_highfps_i2v.py  train_cogvideox_cholec_segpred_i2v_full.py  train_surgwmbench_anchor_i2v.py  trajectory_head.py
HieraSurg/src/finetune/cfgs/: accelerate_config_machine_single_2b.yaml  ds_config.json
HieraSurg/src/finetune/dataset/: data_utils.py  dataset.py  frame_dataset.py  frame_dataset_fps.py  frame_dataset_hiera.py  precompute_features.py  surgwmbench_anchor_dataset.py  utils_sd.py
HieraSurg/src/inference/: eval_surgwmbench_anchor_i2v.py  evaluate_detector.py  evaluate_metrics.py  evaluate_metrics_8fps.py  full_pipeline_inference_i2v.py  segpred_inference_i2v.py
HieraSurg/src/segcond/: cogvideo_segcond.py  cogvideo_segpred.py  feature_utils.py  segcond_pipeline.py  segpred_pipeline.py
HieraSurg/src/tools/: cholec_video_extract.py  cholec_video_extract_parallel.py  fvd.py  remove_8fps_unmatched.py  validate_surgwmbench_anchor_loader.py  vis_maps.py  visualize_frames.py
HieraSurg/src/utils/: diffusion_utils.py
HieraSurg/tests/: test_surgwmbench_anchor_dataset.py
SurgSora/: .gitignore  README.md  USAGE.md  gradio_demo_run.py  pyproject.toml  requirements.txt
SurgSora/Training/: convert_checkpoint.py  eval_surgwmbench_20anchor.py  surgwmbench_modeling.py  train_stage1.py  train_stage1.sh  train_stage2.py  train_stage2.sh  train_surgwmbench_20anchor.py  trajectory_head.py
SurgSora/Training/models/: controlnet_sdv.py  softsplat.py  svdxt_featureflow_forward_controlnet_s2d_fixcmp_norefine.py  (+1 more)
SurgSora/Training/pipeline/: pipeline.py
SurgSora/models/: Control_Backbone.py  Control_Encoder.py  controlnet_sdv.py  softsplat.py
SurgSora/pipeline/: pipeline.py
SurgSora/tests/: test_surgwmbench_20anchor.py
VideoGPT/: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
VideoGPT/scripts/: eval_surgwmbench_videogpt.py  predict_trajectories_v8.py  train_surgwmbench_videogpt.py  train_surgwmbench_vqvae.py
VideoGPT/tests/: test_surgwmbench_data.py
VideoGPT/videogpt/: __init__.py  download.py  gpt.py  surgwmbench_data.py  surgwmbench_metrics.py
iVideoGPT/: README.md  USAGE.md  pyproject.toml  requirements.txt  train_gpt.py  train_tokenizer.py
iVideoGPT/configs/llama/: config_surgwm_anchor.json
iVideoGPT/datasets/: README.md
iVideoGPT/ivideogpt/data/: __init__.py  surgwmbench_anchor_dataloader.py
iVideoGPT/ivideogpt/transformer/: __init__.py  trajectory_head.py
iVideoGPT/ivideogpt/vq_model/: conditional_vae.py
iVideoGPT/scripts/evaluation/: surgwmbench-anchor-256.sh
iVideoGPT/scripts/finetune/: bair-64-act-cond.sh  surgwmbench-anchor-256.sh
iVideoGPT/tests/: test_surgwmbench_anchor_dataset.py  test_surgwmbench_trajectory_head.py
iVideoGPT/tools/: evaluate_surgwmbench_anchor_prediction.py
iVideoGPT/vp/: vp2_requirements.txt
(+1 files in other folders)
