[project]
name = "ivideogpt-surgwm"
version = "0.1.0"
description = "iVideoGPT adaptation for SurgWMBench 20-anchor video prediction."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=0.27.0",
    "diffusers==0.27.0",
    "huggingface-hub>=0.20.2,<0.26",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.4.4",
    "lpips>=0.1.4",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "peft>=0.8.0,<0.9",
    "piqa>=1.3.2",
    "pillow>=9.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "safetensors>=0.4.0",
    "tensorboard>=2.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tqdm>=4.64.0",
    "transformers==4.38.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
